[package]
name = "vizia_window"
description = "The window components of vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vizia_input.workspace = true
vizia_style.workspace = true
morphorm = "0.6.5"
accesskit = "0.16"
bitflags = "2.6"

[lints]
workspace = true
