[package]
name = "vizia_window"
description = "The window components of vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vizia_input.workspace = true
vizia_style.workspace = true
# morphorm = {path = "../../../morpshorm"}
morphorm = {git = "https://github.com/vizia/morphorm", branch = "alternate"}
accesskit = "0.16"
bitflags = "2.6"

[lints]
workspace = true
