[package]
name = "vizia_window"
description = "The window components of vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vizia_input.workspace = true
bitflags.workspace = true

[lints]
workspace = true
