[package]
name = "vizia_winit"
description = "Winit backend for vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["accesskit"]
x11 = ["winit/x11", "glutin/x11", "glutin-winit/x11"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita", "glutin-winit/wayland", "copypasta?/wayland"]
clipboard = ["copypasta"]
accesskit = ["dep:accesskit_winit", "dep:accesskit"]

[dependencies]
vizia_input.workspace = true
vizia_core.workspace = true
vizia_id.workspace = true
vizia_window.workspace = true

accesskit = {version = "0.17", optional = true}
winit = { version = "0.30", default-features = false}
skia-safe = { version = "0.84", features = ["gl", "textlayout", "svg"] }
glutin = { version = "0.32", default-features = false, features = ["egl", "wgl", "glx"]}
copypasta = {version = "0.10", optional = true, default-features = false }
accesskit_winit = { version = "0.23", optional = true}
glutin-winit = { version = "0.5", default-features = false, features = ["egl", "wgl", "glx"]}
gl-rs = { package = "gl", version = "0.14.0" }
hashbrown = "0.15"

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.84"
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", default-features = false, features = [ "Win32_Graphics_Dwm" ] }

[lints]
workspace = true
