[package]
name = "vizia_winit"
description = "Winit backend for vizia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["accesskit", "gl"]
x11 = ["winit/x11", "glutin/x11", "glutin-winit/x11"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita", "glutin-winit/wayland", "copypasta?/wayland"]
clipboard = ["copypasta"]
accesskit = ["dep:accesskit_winit", "dep:accesskit"]

gl = [
    "dep:gl",
    "dep:glutin",
    "dep:glutin-winit",
    "skia-safe/gl",
]
dx12 = [
    "skia-safe/d3d",
]
metal = [
    "dep:objc2",
    "dep:objc2-app-kit",
    "dep:objc2-foundation",
    "dep:objc2-metal",
    "dep:objc2-metal-kit",
    "dep:objc2-quartz-core",
    "skia-safe/metal",
]
vulkan = [
    "dep:vulkano",
    "skia-safe/vulkan",
]

[dependencies]
vizia_input.workspace = true
vizia_core.workspace = true
vizia_id.workspace = true
vizia_reactive.workspace = true
vizia_window.workspace = true

accesskit = {workspace = true, optional = true}
winit = { workspace = true, features = ["rwh_06"] }
skia-safe = { workspace = true }
copypasta = {workspace = true, optional = true, default-features = false }
accesskit_winit = { workspace = true, optional = true}
hashbrown.workspace = true
log.workspace = true

# gl - optional on all platforms, enabled by the gl feature
gl = { version = "0.14.0", optional = true }
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }

# vulkan - optional on all platforms, enabled by the vulkan feature
vulkano = { version = "0.35", optional = true, default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
# Merged: DWM (cloaking) + D3D12 (dx12 backend). Always present on Windows; dx12 feature gates the backend code.
windows = { version = "0.62", default-features = false, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Graphics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# metal backend deps — only compiled on macOS; metal feature gates the backend code.
objc2 = { version = "0.6", optional = true }
objc2-core-graphics = { version = "0.3", optional = true }
objc2-quartz-core = { version = "0.3", optional = true, features = [
    "objc2-metal",
    "CAMetalLayer",
] }
objc2-app-kit = { version = "0.3", optional = true, features = [
    "NSView",
] }
objc2-foundation = { version = "0.3", optional = true }
objc2-metal = { version = "0.3", optional = true, features = [] }
objc2-metal-kit = { version = "0.3", optional = true, features = [
    "MTKView",
    "objc2-app-kit",
    "objc2-quartz-core",
] }

[build-dependencies]
cfg_aliases = "0.2.1"

[lints]
workspace = true
