[package]
name = "gallery"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vizia.workspace = true
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
bytes = "1"

[lints]
workspace = true
