[package]
name = "gallery"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vizia = { workspace = true, features = ["tokio"] }
serde.workspace = true
reqwest.workspace = true
bytes = "1"

[lints]
workspace = true
