[package]
name = "widget_gallery"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vizia.workspace = true
fern.workspace = true
log.workspace = true
chrono.workspace = true

[lints]
workspace = true
